Correction to be compliant to sonar cloud